fix: dynamic sidebar scrollbar

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -30,3 +30,27 @@ h1, h2, h3, h4, h5, h6 {
 body {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+#sidebar-wrapper {
+   overflow-y: auto;
+   max-height: 100vh;
+}
+
+#sidebar-wrapper::-webkit-scrollbar {
+   scrollbar-width: thin;
+   background: transparent;
+   position: absolute;
+}
+
+#sidebar-wrapper:hover {
+   scrollbar-width: thin;
+ }
+ 
+ #sidebar-wrapper:hover::-webkit-scrollbar {
+   width: thin;
+ }
+ 
+ #sidebar-wrapper:hover::-webkit-scrollbar-thumb {
+   background-color: rgba(120, 120, 120, 0.6);
+   border-radius: 3px;
+ }
